Actions
Bug #13054
closedMatchData segfaults if RMatch::regexp is nil
Bug #13054:
MatchData segfaults if RMatch::regexp is nil
Actions
Added by rhenium (Kazuki Yamaguchi) almost 10 years ago. Updated over 9 years ago.
Applied in changeset r57123.
re.c: consider the case of RMatch::regexp is nil
Follow r49675, r57098 and r57110. Don't assume RMatch::regexp always
contains a valid Regexp instance; it will be Qnil if the MatchData is
created by rb_backref_set_string(). [ruby-core:78741] [Bug #13054]
ruby_2_2 r57221 merged revision(s) 57123.
ruby_2_3 r57569 merged revision(s) 57123.